programming/articles/EffectiveJava/pages/page_0141.txt
CHAPTER 5
GENERICS
120
This program compiles, but because it uses the raw type List, you get a warning:
Test.java:10: warning: [unchecked] unchecked call to add(E) as a 
member of the raw type List
list.add(o);
^
And indeed, if you run the program, you get a ClassCastException when the
program tries to cast the result of the invocation strings.get(0), which is an
Integer, to a String. This is a compiler-generated cast, so it’s normally guaran-
teed to succeed, but in this case we ignored a compiler warning and paid the price.
If you replace the raw type List with the parameterized type List<Object>
in the unsafeAdd declaration and try to recompile the program, you’ll find that it
no longer compiles but emits the error message:
Test.java:5: error: incompatible types: List<String> cannot be 
converted to List<Object>
unsafeAdd(strings, Integer.valueOf(42));
^
You might be tempted to use a raw type for a collection whose element type is
unknown and doesn’t matter. For example, suppose you want to write a method
that takes two sets and returns the number of elements they have in common.
Here’s how you might write such a method if you were new to generics:
// Use of raw type for unknown element type - don't do this!
static int numElementsInCommon(Set s1, Set s2) {
int result = 0;
for (Object o1 : s1)
if (s2.contains(o1))
result++;
return result;
}
This method works but it uses raw types, which are dangerous. The safe alter-
native is to use unbounded wildcard types. If you want to use a generic type but
you don’t know or care what the actual type parameter is, you can use a question
mark instead. For example, the unbounded wildcard type for the generic type
Set<E> is Set<?> (read “set of some type”). It is the most general parameterized
Set type, capable of holding any set. Here is how the numElementsInCommon
declaration looks with unbounded wildcard types:
// Uses unbounded wildcard type - typesafe and flexible
static int numElementsInCommon(Set<?> s1, Set<?> s2) { ... }